--- a/src/stylus/foundation/basis/hero.styl
+++ b/src/stylus/foundation/basis/hero.styl
@@ -1,8 +1,4 @@
-.p-hero {
-  @extend .{bs-prefix}c-hero;
-  background-image: url('../images/photo-1449089299624-89ce41e8306c.jpeg');
-  bs-background-image-cover();
-
+.{_prefix}c-hero {
   &, a {
     color: #fff;
   }
