--- a/src/stylus/layout/footer.styl
+++ b/src/stylus/layout/footer.styl
@@ -1,11 +1,11 @@
-.{bs-prefix}l-footer {
-  background-color: bs-color-text;
+.{_prefix}l-footer {
+  background-color: _color-text;
   color: #fff;
-  bs-padding(2, 0, 0);
+  _padding(2, 0, 0);
 
   .p-footer-nav {
     a {
-      color: bs-color-gray;
+      color: _color-gray;
     }
   }
 }
