--- a/src/stylus/object/component/section.styl
+++ b/src/stylus/object/component/section.styl
@@ -1,13 +1,13 @@
 .c-section {
-  bs-padding(3, 0);
+  _padding(3, 0);
 
   &--bg {
     background-color: color-main;
   }
 
   &__title {
-    bs-margin(0, 0, 2);
-    bs-font-size-line-height(bs-base-font-size * 2);
+    _margin(0, 0, 2);
+    _font-size-line-height(_base-font-size * 2);
     text-align: center;
   }
 }
