--- a/src/stylus/foundation/foundation.styl
+++ b/src/stylus/foundation/foundation.styl
@@ -18,7 +18,7 @@ body {
 }
 
 a {
-  transition: background-color bs-transition-duration bs-transition-function-timing,
-              color bs-transition-duration bs-transition-function-timing;
-  color: bs-dark(color-accent);
+  transition: background-color _transition-duration _transition-function-timing,
+              color _transition-duration _transition-function-timing;
+  color: _dark(color-accent);
 }
