--- a/src/stylus/layout/header.styl
+++ b/src/stylus/layout/header.styl
@@ -1,17 +1,17 @@
-.{bs-prefix}l-header {
-  transition: background-color bs-transition-duration bs-transition-function-timing,
-              color bs-transition-duration bs-transition-function-timing;
+.{_prefix}l-header {
+  transition: background-color _transition-duration _transition-function-timing,
+              color _transition-duration _transition-function-timing;
 
   &, a {
     color: #fff;
   }
 
-  > .{bs-prefix}c-container {
+  > .{_prefix}c-container {
     position: relative;
   }
 
   .p-site-branding {
-    bs-padding(.5, 0);
+    _padding(.5, 0);
   }
 
   .p-global-nav {
@@ -20,14 +20,14 @@
     }
   }
 
-  .{bs-prefix}c-hamburger-btn {
+  .{_prefix}c-hamburger-btn {
     position: absolute;
     top: 50%;
-    right: (bs-base-line-height / 2);
+    right: (_base-line-height / 2);
     transform: translateY(-50%);
 
-    +bs-bp-md-min() {
-      right: bs-base-line-height;
+    +_media-min(md) {
+      right: _base-line-height;
     }
 
     &__bar {
@@ -37,24 +37,24 @@
 
   html[data-scrolled="true"] & {
     background-color: rgba(#fff, .8);
-    box-shadow: 1px 0 3px rgba(bs-color-black, .1);
+    box-shadow: 1px 0 3px rgba(_color-black, .1);
 
     & {
-      color: bs-color-text;
+      color: _color-text;
     }
 
     .p-global-nav {
-      .{bs-prefix}c-menu__item > a {
-        color: bs-color-text;
+      .{_prefix}c-navbar__item > a {
+        color: _color-text;
       }
     }
 
-    .{bs-prefix}c-hamburger-btn {
+    .{_prefix}c-hamburger-btn {
       &__bar {
-        background-color: bs-color-text;
+        background-color: _color-text;
       }
 
-      &[aria-expanded="true"] .{bs-prefix}c-hamburger-btn__bar:nth-child(2) {
+      &[aria-expanded="true"] .{_prefix}c-hamburger-btn__bar:nth-child(2) {
         display: none;
       }
     }
