--- a/src/stylus/object/project/footer-nav.styl
+++ b/src/stylus/object/project/footer-nav.styl
@@ -1,15 +1,12 @@
 .p-footer-nav {
-  bs-font-size-line-height(14px);
+  _font-size-line-height(14px);
 
   &__list {
-    list-style: none;
-    margin: 0;
-    padding: 0;
+    _list-unstyled();
   }
 
   &__item {
-    margin: 0;
-    bs-padding(0, 0, .5);
+    _padding(0, 0, .5);
 
     a {
       text-decoration: none;
