--- a/src/stylus/object/project/global-nav.styl
+++ b/src/stylus/object/project/global-nav.styl
@@ -1,23 +1,13 @@
 .p-global-nav {
-  bs-font-size-line-height(14px);
+  _font-size-line-height(14px);
 
-  .{bs-prefix}c-menu__submenu {
-    background-color: rgba(bs-color-black, .8);
+  .{_prefix}c-navbar__submenu {
+    background-color: rgba(_color-black, .8);
   }
 
-  .{bs-prefix}c-menu__subitem {
-    +bs-hover() {
+  .{_prefix}c-navbar__subitem {
+    +_hover() {
       background-color: rgba(#fff, .05);
-    }
-  }
-}
-
-.{bs-prefix}l-header--is-scrolled {
-  .p-global-nav {
-    .{bs-prefix}c-menu__item {
-      +bs-hover() {
-        background-color: rgba(#fff, .05);
-      }
     }
   }
 }
