--- a/src/stylus/style.styl
+++ b/src/stylus/style.styl
@@ -1,8 +1,14 @@
 _between-lines = .375rem;
 color-main     = #f3f8f8;
 color-accent   = #9ed0d0;
+color-primary  = #9ed0d0;
+color-success  = #A2DDA4;
+color-info     = #A4E1E7;
+color-warning  = #C9C756;
+color-danger   = #D8575C;
 
 @import '../../node_modules/getbasis/src/stylus/basis';
+@import 'core/mixin/*';
 @import 'foundation/*';
 @import 'foundation/basis/*';
 @import 'layout/*';
