--- a/src/stylus/object/component/section.styl
+++ b/src/stylus/object/component/section.styl
@@ -10,4 +10,8 @@
     _font-size-line-height(_base-font-size * 2);
     text-align: center;
   }
+
+  &__content {
+    _margin-between-children(1);
+  }
 }
