--- a/src/stylus/object/project/global-nav.styl
+++ b/src/stylus/object/project/global-nav.styl
@@ -1,13 +1,3 @@
 .p-global-nav {
-  _font-size-line-height(14px);
-
-  .{_prefix}c-navbar__submenu {
-    background-color: rgba(_color-black, .8);
-  }
-
-  .{_prefix}c-navbar__subitem {
-    +_hover() {
-      background-color: rgba(#fff, .05);
-    }
-  }
+  _font-size-line-height(_base-font-size-px - 2);
 }
