Added blog page

--- a/src/ejs/index.ejs
+++ b/src/ejs/index.ejs
@@ -13,12 +13,12 @@
         <section class="_c-hero _c-hero--full _c-hero--cover _c-hero--overlay" style="background-image: url('./assets/images/photo-1449089299624-89ce41e8306c.jpeg')">
           <div class="_c-hero__content">
             <div class="_c-container">
-              <div class="p-main-visual-content">
-                <h1 class="p-main-visual-content__title">integrity</h1>
-                <div class="p-main-visual-content__content">
+              <div class="p-main-visual">
+                <h1 class="p-main-visual__title">integrity</h1>
+                <div class="p-main-visual__content">
                   integrity is a responsive HTML5 + CSS3 template created by <a href="http://2inc.org" target="_blank">Monkey Wrench</a>
                 </div>
-                <div class="p-main-visual-content__action">
+                <div class="p-main-visual__action">
                   <div class="_c-row _c-row--margin-s _c-row--md-margin">
                     <div class="_c-row__col _c-row__col--1-1 _c-row__col--md-4-12 _c-row__col--md-offset-2-12">
                       <a class="_c-btn _c-btn--block" href="https://github.com/getbasis/integrity/archive/master.zip" target="_blank"><i class="fa fa-download" aria-hidden="true"></i> Download <small>(Source files only)</small></a>
