--- a/src/stylus/foundation/basis/hero.styl
+++ b/src/stylus/foundation/basis/hero.styl
@@ -3,29 +3,7 @@
     background-color: rgba(#000, .3);
   }
 
-  .{bs-prefix}c-hero__header {
-    bs-padding(.5, 0, 0);
-  }
-}
-
-.p-main-visual-content {
-  text-align: center;
-
-  &__title {
-    bs-margin(0, 0, .5);
-    display: inline-block;
-    border-bottom: 1px solid #fff;
-    color: #fff;
-    bs-padding(0, 0, .5);
-  }
-
-  &__content {
-    &, a {
-      color: #fff;
-    }
-  }
-
-  &__action {
-    _margin-top(1);
+  .{_prefix}c-hero__header {
+    _padding(.5, 0, 0);
   }
 }
