--- a/src/stylus/object/component/page-header.styl
+++ b/src/stylus/object/component/page-header.styl
@@ -2,12 +2,8 @@
   text-align: center;
   _padding(3, 0);
   _background-image-cover();
-  _overlay(color-accent);
+  _overlay(color-accent, .8);
   position: relative;
-
-  &::before {
-    opacity: .8;
-  }
 
   &__title {
     position: relative;
