--- a/src/stylus/object/component/section.styl
+++ b/src/stylus/object/component/section.styl
@@ -5,6 +5,10 @@
     background-color: color-main;
   }
 
+  &--bt {
+    border-top: 1px solid _lighter(_color-gray);
+  }
+
   &__title {
     _margin(0, 0, 2);
     _font-size-line-height(_base-font-size * 2);
