--- a/src/stylus/core/variable/variable.styl
+++ b/src/stylus/core/variable/variable.styl
@@ -1,5 +1,12 @@
 _between-lines = .375rem;
 
+_h1-font-size-scale = 1;
+_h2-font-size-scale = 2;
+_h3-font-size-scale = 1.75;
+_h4-font-size-scale = 1.5;
+_h5-font-size-scale = 1.25;
+_h6-font-size-scale = 1.25;
+
 color-main     = #f3f8f8;
 color-accent   = #9ed0d0;
 color-primary  = #9ed0d0;
