--- a/src/stylus/object/component/site-branding.styl
+++ b/src/stylus/object/component/site-branding.styl
@@ -1,6 +1,6 @@
 .c-site-branding {
   &__title {
     margin: 0;
-    bs-font-size-line-height(bs-base-font-size * 2);
+    _font-size-line-height(_base-font-size * 2);
   }
 }
