--- a/src/ejs/components.ejs
+++ b/src/ejs/components.ejs
@@ -13,10 +13,10 @@
 
       <main id="main" class="_l-main" role="main">
 
-        <section class="c-section">
+        <section class="_c-section">
           <div class="_c-container">
-            <h2 class="c-section__title">Alert</h2>
-            <div class="c-section__content">
+            <h2 class="_c-section__title">Alert</h2>
+            <div class="_c-section__content">
               <div class="_c-row _c-row--margin">
                 <div class="_c-row__col _c-row__col--1-1 _c-row__col--md-1-2">
                   <div class="_c-alert">Default</div>
@@ -41,10 +41,10 @@
           </div>
         </section>
 
-        <section class="c-section c-section--bg">
+        <section class="_c-section _c-section--bg">
           <div class="_c-container">
-            <h2 class="c-section__title">Baloon</h2>
-            <div class="c-section__content">
+            <h2 class="_c-section__title">Baloon</h2>
+            <div class="_c-section__content">
               <div class="_c-row _c-row--margin">
                 <div class="_c-row__col _c-row__col--1-1 _c-row__col--md-1-2">
                   <div class="_c-balloon-top">top</div>
@@ -63,10 +63,10 @@
           </div>
         </section>
 
-        <section class="c-section">
+        <section class="_c-section">
           <div class="_c-container">
-            <h2 class="c-section__title">Buttons</h2>
-            <div class="c-section__content">
+            <h2 class="_c-section__title">Buttons</h2>
+            <div class="_c-section__content">
               <div class="_c-row _c-row--margin">
                 <div class="_c-row__col _c-row__col--1-3 _c-row__col--md-1-6">
                   <span class="_c-btn _c-btn--block">Default</span>
@@ -91,10 +91,10 @@
           </div>
         </section>
 
-        <section class="c-section c-section--bg">
+        <section class="_c-section _c-section--bg">
           <div class="_c-container">
-            <h2 class="c-section__title">Card</h2>
-            <div class="c-section__content">
+            <h2 class="_c-section__title">Card</h2>
+            <div class="_c-section__content">
               <div class="_c-row _c-row--margin">
                 <% for (var i = 0; i < 4; i++) { %>
                 <div class="_c-row__col _c-row__col--1-1 _c-row__col--md-1-4">
@@ -116,10 +116,10 @@
           </div>
         </section>
 
-        <section class="c-section">
+        <section class="_c-section">
           <div class="_c-container">
-            <h2 class="c-section__title">Forms</h2>
-            <div class="c-section__content">
+            <h2 class="_c-section__title">Forms</h2>
+            <div class="_c-section__content">
               <div class="_c-row _c-row--margin">
                 <div class="_c-row__col _c-row__col--1-1 _c-row__col--md-1-3">
                   <label class="_c-checkbox">
@@ -182,10 +182,10 @@
           </div>
         </section>
 
-        <section class="c-section c-section--bg">
+        <section class="_c-section _c-section--bg">
           <div class="_c-container">
-            <h2 class="c-section__title">Drawer</h2>
-            <div class="c-section__content">
+            <h2 class="_c-section__title">Drawer</h2>
+            <div class="_c-section__content">
               <div class="_c-drawer" data-c="drawer" style="border: 1px solid #ccc; height: 160px; overflow: hidden; margin-bottom: 5px; background-color: #fff;">
                 <nav id="___drawer" class="_c-drawer__body" data-c="drawer__body" role="navigation" aria-hidden="true">
                   <ul class="_c-drawer__menu">
@@ -213,10 +213,10 @@
           </div>
         </section>
 
-        <section class="c-section">
+        <section class="_c-section">
           <div class="_c-container">
-            <h2 class="c-section__title">Flexible Media</h2>
-            <div class="c-section__content">
+            <h2 class="_c-section__title">Flexible Media</h2>
+            <div class="_c-section__content">
               <div class="_c-row _c-row--margin">
                 <% for (var i = 0; i < 2; i++) { %>
                 <div class="_c-row__col _c-row__col--1-1 _c-row__col--md-1-2">
@@ -238,7 +238,7 @@
         <section class="_c-hero _c-hero--cover _c-hero--overlay" style="background-image: url(./assets/images/photo-1449089299624-89ce41e8306c.jpeg); color: #fff;">
           <div class="_c-hero__content _u-text-center" style="padding: 5rem;">
             <div class="_c-container">
-              <div class="c-section__content">
+              <div class="_c-section__content">
                 <h2>Hero</h2>
                 <p>
                   Lorem ipsum dolor sit amet
@@ -251,10 +251,10 @@
           </div>
         </section>
 
-        <section class="c-section">
+        <section class="_c-section">
           <div class="_c-container">
-            <h2 class="c-section__title">Media</h2>
-            <div class="c-section__content">
+            <h2 class="_c-section__title">Media</h2>
+            <div class="_c-section__content">
               <div class="_c-row _c-row--margin">
                 <% for (var i = 0; i < 2; i++) { %>
                 <div class="_c-row__col _c-row__col--1-1 _c-row__col--md-1-2">
@@ -273,10 +273,10 @@
           </div>
         </section>
 
-        <section class="c-section c-section--bg">
+        <section class="_c-section _c-section--bg">
           <div class="_c-container">
-            <h2 class="c-section__title">Navbar</h2>
-            <div class="c-section__content">
+            <h2 class="_c-section__title">Navbar</h2>
+            <div class="_c-section__content">
               <ul class="_c-navbar">
                 <li class="_c-navbar__item" data-c="navbar__item" aria-haspopup="true">
                   <a href="#">menu</a>
@@ -300,10 +300,10 @@
           </div>
         </section>
 
-        <section class="c-section">
+        <section class="_c-section">
           <div class="_c-container">
-            <h2 class="c-section__title">Spinner</h2>
-            <div class="c-section__content _u-text-center">
+            <h2 class="_c-section__title">Spinner</h2>
+            <div class="_c-section__content _u-text-center">
               <div class="_c-row _c-row--margin">
                 <div class="_c-row__col _c-row__col--1-3">
                   <div class="_c-spinner-dots">
