--- a/src/stylus/foundation/basis/copyright.styl
+++ b/src/stylus/foundation/basis/copyright.styl
@@ -1,4 +1,4 @@
-.c-copyright {
+.{_prefix}c-copyright {
   _margin(2, 0, 0);
   _font-size-line-height(14px);
   border-top: 1px solid _darker(_color-gray);
