--- a/src/stylus/foundation/foundation.styl
+++ b/src/stylus/foundation/foundation.styl
@@ -23,7 +23,7 @@ a {
   color: _dark(color-accent);
 }
 
-@import '../../../node_modules/getbasis-margin-between-children/src/stylus/foundation/foundation';
+@import '../../node_modules/getbasis-margin-between-children/src/stylus/foundation/foundation';
 
 blockquote {
   _margin-between-children(.5);
