--- a/src/stylus/layout/container.styl
+++ b/src/stylus/layout/container.styl
@@ -1,1 +1,1 @@
-@import '../../../node_modules/getbasis-layout/src/stylus/layout/container';
+@import '../../node_modules/getbasis-layout/src/stylus/layout/container';
