--- a/src/ejs/_parts/_copyright.ejs
+++ b/src/ejs/_parts/_copyright.ejs
@@ -1,4 +1,4 @@
-<div class="c-copyright">
+<div class="_c-copyright">
   <div class="_c-container">
     Template by <a href="http://2inc.org" target="_blank">Monkey Wrench</a>
   </div>
