--- a/src/ejs/_parts/_site-branding.ejs
+++ b/src/ejs/_parts/_site-branding.ejs
@@ -1,5 +1,5 @@
-<div class="c-site-branding">
-  <h1 class="c-site-branding__title">
+<div class="_c-site-branding">
+  <h1 class="_c-site-branding__title">
     integrity
   </h1>
 </div>
