--- a/src/ejs/blog.ejs
+++ b/src/ejs/blog.ejs
@@ -11,20 +11,20 @@
     <div id="contents" class="_l-contents" data-l="contents">
       <%- include('_parts/_page-header', {title: title}) %>
 
-      <div class="c-section">
+      <div class="_c-section">
         <div class="_c-container">
           <div class="_c-row _c-row--margin">
             <div class="_c-row__col _c-row__col--1-1 _c-row__col--lg-3-4">
 
               <main id="main" class="_l-main" role="main">
-                <div class="c-entry">
-                  <header class="c-entry__header">
-                    <h1 class="c-entry__title">ドレミファは灰のおじぎぐうぐうねむってしまいました汁を療へ見ふしぎたまし。</h1>
-                    <div class="c-entry__meta">
+                <div class="_c-entry">
+                  <header class="_c-entry__header">
+                    <h1 class="_c-entry__title">ドレミファは灰のおじぎぐうぐうねむってしまいました汁を療へ見ふしぎたまし。</h1>
+                    <div class="_c-entry__meta">
                       December 14, 2016
                     </div>
                   </header>
-                  <div class="c-entry__content">
+                  <div class="_c-entry__content">
                     <p>
                       またまだ上手たたというトマトたまし。俄ないでしんですはですでは聴衆の正確たちのなかともばたばた俄ですたらて、何じゃあ狸にするれんんた。つかまえすぎきみも茎によくますてはじめのゴーシュのドレミファたちへしゃくにさわっ第十なんどがいのおじぎを歩いてはじめませた。
                     </p>
@@ -82,7 +82,7 @@
       </div>
 
       <div class="_c-container">
-        <div class="c-section c-section--bt">
+        <div class="_c-section _c-section--bt">
           <%- include('_parts/_pagination') %>
         </div>
       </div>
