--- a/src/ejs/index.ejs
+++ b/src/ejs/index.ejs
@@ -33,19 +33,19 @@
           </div>
         </section>
 
-        <section class="c-section">
+        <section class="_c-section">
           <div class="_c-container">
-            <h2 class="c-section__title">一疋は沢山の病気楽長曲でうちからすまセロまします。</h2>
-            <div class="c-section__content">
+            <h2 class="_c-section__title">一疋は沢山の病気楽長曲でうちからすまセロまします。</h2>
+            <div class="_c-section__content">
               実はまだいい気ましたという硝子だう。愉快たましのですもたそれから小屋の下手家のところがはまるでくたくたなくまして、みんななど風をしせことだた。聞えるすぎわれわれも中をないだて今夜のかっこうの手らをい第三ゴーシュ曲のびっくりを聞いから行ったござい。
             </div>
           </div>
         </section>
 
-        <section class="c-section c-section--bg">
+        <section class="_c-section _c-section--bg">
           <div class="_c-container">
-            <h2 class="c-section__title">ねこは前帰らて出しで。下も三いろまん中のようをなるがいなら。</h2>
-            <div class="c-section__content">
+            <h2 class="_c-section__title">ねこは前帰らて出しで。下も三いろまん中のようをなるがいなら。</h2>
+            <div class="_c-section__content">
               <div class="_c-row _c-row--margin _c-row--md-fill">
                 <div class="_c-row__col _c-row__col--1-1 _c-row__col--md-1-3">
                   <section class="p-vertical-media">
@@ -109,12 +109,12 @@
           </div>
         </section>
 
-        <section class="c-section">
+        <section class="_c-section">
           <div class="_c-container">
             <div class="_c-row _c-row--margin">
               <div class="_c-row__col _c-row__col--1-1 _c-row__col--md-1-3">
-                <h2 class="c-section__title _u-text-left">猫をせだだっ。「扉でやめまし。かっこう、おまえからドレミファ。</h2>
-                <div class="c-section__content">
+                <h2 class="_c-section__title _u-text-left">猫をせだだっ。「扉でやめまし。かっこう、おまえからドレミファ。</h2>
+                <div class="_c-section__content">
                   <p>
                     し。」何は前のときのこう一生けん命の限りをあわてたらた。交響曲もはんにおこどもに弾きと感情でセロとなおりていくらひとつ思えれな所へ落ちでた。
                   </p>
@@ -130,10 +130,10 @@
           </div>
         </section>
 
-        <section class="c-section c-section--bg">
+        <section class="_c-section _c-section--bg">
           <div class="_c-container">
-            <h2 class="c-section__title">ねこは前帰らて出しで。</h2>
-            <div class="c-section__content">
+            <h2 class="_c-section__title">ねこは前帰らて出しで。</h2>
+            <div class="_c-section__content">
               <div class="_c-row _c-row--margin">
                 <div class="_c-row__col _c-row__col--1-1 _c-row__col--md-1-4">
                   <section class="p-vertical-media">
@@ -192,41 +192,41 @@
           </div>
         </section>
 
-        <section class="c-section">
+        <section class="_c-section">
           <div class="_c-container">
             <div class="_c-row _c-row--margin-l">
               <div class="_c-row__col _c-row__col--1-1 _c-row__col--md-1-2">
-                <h2 class="c-section__title _u-text-left">夜のいつかの顔で。吸っ。</h2>
-                <ul class="c-entries">
-                  <li class="c-entries__item">
+                <h2 class="_c-section__title _u-text-left">夜のいつかの顔で。吸っ。</h2>
+                <ul class="_c-entries">
+                  <li class="_c-entries__item">
                     <div class="_c-media">
                       <div class="_c-media__figure">
                         <img src="./assets/images/photo-1449089299624-89ce41e8306c.jpeg" alt="" />
                       </div>
                       <div class="_c-media__body">
-                        <time class="c-entries__item-date" datetime="2015-04-20">2015/04/20</time>
+                        <time class="_c-entries__item-date" datetime="2015-04-20">2015/04/20</time>
                         <a href="#">呆気は子をして一生けん命た。ではたくさんはまるでいじめますです。</a>
                       </div>
                     </div>
                   </li>
-                  <li class="c-entries__item">
+                  <li class="_c-entries__item">
                     <div class="_c-media">
                       <div class="_c-media__figure">
                         <img src="./assets/images/photo-1449089299624-89ce41e8306c.jpeg" alt="" />
                       </div>
                       <div class="_c-media__body">
-                        <time class="c-entries__item-date" datetime="2015-04-20">2015/04/20</time>
+                        <time class="_c-entries__item-date" datetime="2015-04-20">2015/04/20</time>
                         <a href="#">くるしせいせいますとしてやるて処をおこっようじ表情がしのにところがもう家を代云いましない。</a>
                       </div>
                     </div>
                   </li>
-                  <li class="c-entries__item">
+                  <li class="_c-entries__item">
                     <div class="_c-media">
                       <div class="_c-media__figure">
                         <img src="./assets/images/photo-1449089299624-89ce41e8306c.jpeg" alt="" />
                       </div>
                       <div class="_c-media__body">
-                        <time class="c-entries__item-date" datetime="2015-04-20">2015/04/20</time>
+                        <time class="_c-entries__item-date" datetime="2015-04-20">2015/04/20</time>
                         <a href="#">どうかと狸はてまるで呆れましましてみじかいのにはさっきはおかげの口たた。</a>
                       </div>
                     </div>
@@ -234,18 +234,18 @@
                 </ul>
               </div>
               <div class="_c-row__col _c-row__col--1-1 _c-row__col--md-1-2">
-                <h2 class="c-section__title _u-text-left">何はなるべくまげたまし。</h2>
-                <ul class="c-entries">
-                  <li class="c-entries__item">
-                    <time class="c-entries__item-date" datetime="2015-04-20">2015/04/20</time>
+                <h2 class="_c-section__title _u-text-left">何はなるべくまげたまし。</h2>
+                <ul class="_c-entries">
+                  <li class="_c-entries__item">
+                    <time class="_c-entries__item-date" datetime="2015-04-20">2015/04/20</time>
                     <a href="#">セロもみんなにいままし音のときおまえに飛んましようになあ日ドレミファと工合をとりておまえかあわてのへ済んて来たます。</a>
                   </li>
-                  <li class="c-entries__item">
-                    <time class="c-entries__item-date" datetime="2015-04-20">2015/04/20</time>
+                  <li class="_c-entries__item">
+                    <time class="_c-entries__item-date" datetime="2015-04-20">2015/04/20</time>
                     <a href="#">「ところがどう半分の次。まぜ。」</a>
                   </li>
-                  <li class="c-entries__item">
-                    <time class="c-entries__item-date" datetime="2015-04-20">2015/04/20</time>
+                  <li class="_c-entries__item">
+                    <time class="_c-entries__item-date" datetime="2015-04-20">2015/04/20</time>
                     <a href="#">うと云えとあけですかとうたいてしばらくトランペットへ赤ん坊をまるでついて譜もごたた。</a>
                   </li>
                 </ul>
@@ -254,10 +254,10 @@
           </div>
         </section>
 
-        <section class="c-section c-section--bg">
+        <section class="_c-section _c-section--bg">
           <div class="_c-container">
-            <h2 class="c-section__title">裏。かっかでもたしかにゴーシュ六日はありがたい方たよ。</h2>
-            <div class="c-section__content">
+            <h2 class="_c-section__title">裏。かっかでもたしかにゴーシュ六日はありがたい方たよ。</h2>
+            <div class="_c-section__content">
               <div class="_c-row _c-row--margin _c-row--md-fill">
                 <div class="_c-row__col _c-row__col--1-1 _c-row__col--lg-1-3">
                   <section class="_c-card">
