Update components page

--- a/src/ejs/components.ejs
+++ b/src/ejs/components.ejs
@@ -65,6 +65,19 @@
 
         <section class="_c-section">
           <div class="_c-container">
+            <h2 class="_c-section__title">Breadcrumbs</h2>
+            <div class="_c-section__content">
+              <ol class="_c-breadcrumbs">
+                <li class="_c-breadcrumbs__item"><a href="#">Home</a></li>
+                <li class="_c-breadcrumbs__item"><a href="#">Blog</a></li>
+                <li class="_c-breadcrumbs__item">Page title</li>
+              </ol>
+            </div>
+          </div>
+        </section>
+
+        <section class="_c-section _c-section--bg">
+          <div class="_c-container">
             <h2 class="_c-section__title">Buttons</h2>
             <div class="_c-section__content">
               <div class="_c-row _c-row--margin">
@@ -91,7 +104,7 @@
           </div>
         </section>
 
-        <section class="_c-section _c-section--bg">
+        <section class="_c-section">
           <div class="_c-container">
             <h2 class="_c-section__title">Card</h2>
             <div class="_c-section__content">
@@ -116,7 +129,7 @@
           </div>
         </section>
 
-        <section class="_c-section">
+        <section class="_c-section _c-section--bg">
           <div class="_c-container">
             <h2 class="_c-section__title">Forms</h2>
             <div class="_c-section__content">
@@ -182,6 +195,17 @@
           </div>
         </section>
 
+        <section class="_c-section">
+          <div class="_c-container">
+            <h2 class="_c-section__title">Copyright</h2>
+            <div class="_c-section__content">
+              <div class="_c-copyright">
+                Copyright &copy; Monkey Wrench. All Rights Reserved.
+              </div>
+            </div>
+          </div>
+        </section>
+
         <section class="_c-section _c-section--bg">
           <div class="_c-container">
             <h2 class="_c-section__title">Drawer</h2>
@@ -209,6 +233,49 @@
                 <div class="_c-hamburger-btn__bar"></div>
                 <div class="_c-hamburger-btn__bar"></div>
               </div>
+            </div>
+          </div>
+        </section>
+
+        <section class="_c-section">
+          <div class="_c-container">
+            <h2 class="_c-section__title">Entries</h2>
+            <div class="_c-section__content">
+              <ul class="_c-entries">
+                <li class="_c-entries__item">
+                  <time class="_c-entries__item-date" datetime="2015-04-20">2015/04/20</time>
+                  <a href="#">セロもみんなにいままし音のときおまえに飛んましようになあ日ドレミファと工合をとりておまえかあわてのへ済んて来たます。</a>
+                </li>
+                <li class="_c-entries__item">
+                  <time class="_c-entries__item-date" datetime="2015-04-20">2015/04/20</time>
+                  <a href="#">「ところがどう半分の次。まぜ。」</a>
+                </li>
+                <li class="_c-entries__item">
+                  <time class="_c-entries__item-date" datetime="2015-04-20">2015/04/20</time>
+                  <a href="#">うと云えとあけですかとうたいてしばらくトランペットへ赤ん坊をまるでついて譜もごたた。</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </section>
+
+        <section class="_c-section _c-section--bg">
+          <div class="_c-container">
+            <h2 class="_c-section__title">Entry</h2>
+            <div class="_c-section__content">
+              <article class="_c-entry">
+                <header class="_c-entry__header">
+                  <h1 class="_c-entry__title">Entry Title</h1>
+                </header>
+                <div class="_c-entry__content">
+                  <p>
+                    子は一飛び立ち巻のようをふるえていな。曲はこどもはんたりみんなをのぞき込んといです。眼は鳥をまっすぐに考えてセロがボックスのようを追い払っんで狸からしてがぶがぶ口を思いからやっでし。やっとまるでねずみが足に歩いですませ。それあんまりにおしまいをはいりて声を弾きましで。
+                  </p>
+                  <p>
+                    子が眼にしていろ何曲でそのゴーシュ窓ぼんやりたり一心らの裏までの窓係りのたってやったほっと何の面目はぴたり弾きものまし。公会堂表情さん。さんをはひけんだでな。あとというのをかくついいた。
+                  </p>
+                </div>
+              </article>
             </div>
           </div>
         </section>
@@ -297,6 +364,30 @@
                 <li class="_c-navbar__item" data-c="navbar__item"><a href="#">menu</a></li>
               </ul>
             </div>
+          </div>
+        </section>
+
+        <section class="_c-section">
+          <div class="_c-container">
+            <h2 class="_c-section__title">Meta</h2>
+            <div class="_c-section__content">
+              <ul class="_c-meta">
+                <li class="_c-meta__item">Date: December 15, 2016</li>
+                <li class="_c-meta__item">Author: Monkey Wrench</li>
+                <li class="_c-meta__item">Category: CSS</li>
+              </ul>
+            </div>
+          </div>
+        </section>
+
+        <section class="_c-section _c-section--bg">
+          <div class="_c-container">
+            <h2 class="_c-section__title">Page Header</h2>
+          </div>
+          <div class="_c-section__content">
+            <header class="_c-page-header">
+              <h1 class="_c-page-header__title">Page Header</h1>
+            </header>
           </div>
         </section>
 
