--- a/src/ejs/index.ejs
+++ b/src/ejs/index.ejs
@@ -21,10 +21,10 @@
                 <div class="p-main-visual__action">
                   <div class="_c-row _c-row--margin-s _c-row--md-margin">
                     <div class="_c-row__col _c-row__col--1-1 _c-row__col--md-4-12 _c-row__col--md-offset-2-12">
-                      <a class="_c-btn _c-btn--block" href="https://github.com/getbasis/integrity/archive/master.zip" target="_blank"><i class="fa fa-download" aria-hidden="true"></i> Download <small>(Source files only)</small></a>
+                      <a class="_c-btn _c-btn--block _c-btn--ghost" href="https://github.com/getbasis/integrity/archive/master.zip" target="_blank"><i class="fa fa-download" aria-hidden="true"></i> Download <small>(Source files only)</small></a>
                     </div>
                     <div class="_c-row__col _c-row__col--1-1 _c-row__col--md-4-12">
-                      <a class="_c-btn _c-btn--block _c-btn--danger" href="https://inc2734.stores.jp/items/5850b06ca458c082a2008f7d" target="_blank"><i class="fa fa-shopping-cart" aria-hidden="true"></i> Buy ¥540 <small>(Included build files)</small></a>
+                      <a class="_c-btn _c-btn--block _c-btn--danger _c-btn--ghost" href="https://inc2734.stores.jp/items/5850b06ca458c082a2008f7d" target="_blank"><i class="fa fa-shopping-cart" aria-hidden="true"></i> Buy ¥540 <small>(Included build files)</small></a>
                     </div>
                   </div>
                 </div>
