--- a/src/stylus/foundation/basis/hero.styl
+++ b/src/stylus/foundation/basis/hero.styl
@@ -1,7 +1,5 @@
 .{_prefix}c-hero {
-  &:before {
-    background-color: rgba(#000, .3);
-  }
+  _overlay(color-accent, .8);
 
   .{_prefix}c-hero__header {
     _padding(.5, 0, 0);
