--- a/src/css/foundation/basis/btn.styl
+++ b/src/css/foundation/basis/btn.styl
@@ -3,6 +3,7 @@
   border: 2px solid color-accent;
   color: color-accent;
   font-weight: bold;
+  _padding(.5, 1);
 
   +_hover() {
     background-color: color-main;
