--- a/src/ejs/_parts/_pagination.ejs
+++ b/src/ejs/_parts/_pagination.ejs
@@ -1,8 +1,8 @@
-<div class="c-pagination">
-  <a class="c-pagination__item"><i class="fa fa-angle-left" aria-hidden="true"></i></a>
-  <span class="c-pagination__item" aria-current="true">1</span>
-  <a class="c-pagination__item">2</a>
-  <span class="c-pagination__item">...</span>
-  <a class="c-pagination__item">10</a>
-  <a class="c-pagination__item"><i class="fa fa-angle-right" aria-hidden="true"></i></a>
+<div class="_c-pagination">
+  <a class="_c-pagination__item-link"><i class="fa fa-angle-left" aria-hidden="true"></i></a>
+  <span class="_c-pagination__item" aria-current="page">1</span>
+  <a class="_c-pagination__item-link">2</a>
+  <span class="_c-pagination__item-ellipsis">...</span>
+  <a class="_c-pagination__item-link">10</a>
+  <a class="_c-pagination__item-link"><i class="fa fa-angle-right" aria-hidden="true"></i></a>
 </div>
